fix: update Open Graph image format from JPG to PNG for consistency

--- a/uni-cot/index.html
+++ b/uni-cot/index.html
@@ -14,7 +14,7 @@
 <meta property="og:title" content="Uni-CoT: Towards Unified Chain-of-Thought Reasoning Across Text and Vision">
 <meta property="og:description" content="Uni-CoT(UniCoT) is a unified framework that enables coherent and scalable multimodal reasoning over dynamic visual states via a novel two-level reasoning architecture and an efficient training paradigm.">
 <meta property="og:url" content="https://sais-fuxi.github.io/projects/uni-cot/">
-<meta property="og:image" content="https://sais-fuxi.github.io/projects/uni-cot/files/og-uni-cot-1200x630.jpg">
+<meta property="og:image" content="https://sais-fuxi.github.io/projects/uni-cot/files/og-uni-cot-1200x630.png">
 
 
 <link href="./files/style.css" rel="stylesheet">
@@ -135,7 +135,7 @@
       "url": "https://sais-fuxi.github.io/projects/uni-cot/",
       "image": {
         "@type": "ImageObject",
-        "url": "https://sais-fuxi.github.io/projects/uni-cot/files/og-uni-cot-1200x630.jpg",
+        "url": "https://sais-fuxi.github.io/projects/uni-cot/files/og-uni-cot-1200x630.png",
         "width": 1200,
         "height": 633
       },
