--- a/uni-cot/index.html
+++ b/uni-cot/index.html
@@ -199,6 +199,7 @@
 <div class="content">
   <h2 style="text-align:center;">&#x1F525;News</h2>
   <p>&#x2705; 2025.07.29 We released UniCoT-7B-MoT, which extends Bagel-7B-MoT model to perform text-to-image generation with self-check (self-reflection) reasoning mechanism.</p>
+  <p>&#x2705; 2025.08.08 We released UniCoT v0.1 technical report on Arxiv and <a href="https://github.com/Fr0zenCrane/UniCoT/blob/main/docs/arxiv_uni_v0.1.pdf">codebase. </a></p>
   <p>&#x1F525; We are still working on the this project to implement more kinds of Chain-of-Thought (CoT) mechanism into unified model, please stay tuned!</p>
 </div>
 
